ci: Add wasm32 toolchain to rust.yml CI job

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Formatting
       run: cargo fmt --check
+    - name: Install wasm32 toolchain
+      run: rustup target add wasm32-unknown-unknown
     - name: Linting
       run: cargo clippy --target wasm32-unknown-unknown
     - name: Build
